Bug 391295 - "APNG blending mode APNG_BLEND_OP_SOURCE not implemented" [p=asmith15@littlesvr.ca (Andrew Smith) r=stuart a1.9=damons]